--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,13 @@
     "name": "integratrcorp/baserepository",
     "description": "Base Repository Package",
     "require": {
-        "php": "^7.3|^7.4|^8.0",
+        "php": "^8.0",
         "ext-json": "*",
-        "league/fractal": "^1.0.x-dev",
-        "illuminate/support": "^10.x-dev"
+        "league/fractal": "^0.17.0",
+        "illuminate/support": "^5.6|^6.0|^7.0|^8.0"
     },
     "require-dev": {
-        "orchestra/testbench": "8.0.x-dev",
-        "phpunit/phpunit": "10.0.x-dev"
+        "orchestra/testbench": "~3.0"
     },
     "license": "MIT",
     "autoload": {
